[gd_scene load_steps=6 format=3 uid="uid://b8cdvr2tr0y4c"]

[ext_resource type="Script" uid="uid://b1mqk1kknrr1k" path="res://scenes/game/screens/main_screen/main.gd" id="1_ig7tw"]
[ext_resource type="PackedScene" uid="uid://c7gpddms8dggn" path="res://scenes/ui/game_information/game_information.tscn" id="2_iu1df"]
[ext_resource type="PackedScene" uid="uid://dibf4fgjie87y" path="res://scenes/game/translator/translator.tscn" id="3_h2yge"]
[ext_resource type="PackedScene" uid="uid://b3cihatsnroda" path="res://scenes/ui/invoices/invoices.tscn" id="5_i25ov"]
[ext_resource type="PackedScene" uid="uid://b0f5kyiejiap" path="res://scenes/ui/customizable_popup_message/customizable_popup_message.tscn" id="6_5kqqw"]

[node name="Main" type="Node2D"]
script = ExtResource("1_ig7tw")

[node name="GameInformation" parent="." instance=ExtResource("2_iu1df")]
offset_right = 1920.0
offset_bottom = 656.0

[node name="WorldPanel" type="PanelContainer" parent="."]
offset_left = 512.0
offset_top = 304.0
offset_right = 1922.0
offset_bottom = 1079.0
mouse_filter = 1

[node name="Translator" parent="." instance=ExtResource("3_h2yge")]
position = Vector2(336, 858)

[node name="Invoices" parent="." instance=ExtResource("5_i25ov")]
position = Vector2(80, 950)

[node name="CustomPopupMessage" parent="." instance=ExtResource("6_5kqqw")]
visible = false

[node name="EventSpawner" type="Timer" parent="."]
wait_time = 0.5

[node name="GameClock" type="Timer" parent="."]

[node name="TaskSpawner" type="Timer" parent="."]
